roles/Addons/files/lnmp/1.Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lnmp
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
