roles/Addons/files/lnmp/4.MySQL.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  # namespace: lnmp
spec:
  selector:
    k8s-app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  # namespace: lnmp
  labels:
    k8s-app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7.20
          ports:
            - name: data
              containerPort: 3306
          resources:
            limits:
              cpu: "1"
              memory: 1024Mi
            requests:
              cpu: "1"
              memory: 1024Mi
          readinessProbe:
            tcpSocket:
              port: data
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: data
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: mysqld
              mountPath: /etc/mysql/mysql.conf.d/mysqld.cnf
              subPath: mysqld.cnf
            - name: mysql
              mountPath: "/var/lib/mysql"
            - name: zoneinfo
              mountPath: /etc/localtime
      volumes:
        - name: mysqld
          configMap:
            name: mysql
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql
        - name: zoneinfo
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
