roles/Addons/files/lnmp/5.Nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: lnmp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wp.k8s.local
spec:
  # type: NodePort
  selector:
    k8s-app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: lnmp
  labels:
    k8s-app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx
  template:
    metadata:
      labels:
        k8s-app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.13.8-alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi
            requests:
              cpu: "0.1"
              memory: 100Mi
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: www
              mountPath: /var/www/html
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: nginx
          configMap:
            name: nginx
        - name: www
          persistentVolumeClaim:
            claimName: www
