roles/Addons/files/lnmp/7.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: lnmp
spec:
  rules:
  - host: lnmp.kubernetes.local
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
